Add data buffering to reduce network traffic, fixed minor bugs, memory managment improvements, moved all definitions of peer functions in launch function, removed unused functions, jshint the file and added a lot of comments.

--- a/DD3/dd3.csproj
+++ b/DD3/dd3.csproj
@@ -86,6 +86,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="all.html" />
+    <Content Include="allGraph16.html" />
     <Content Include="allPie.html" />
     <Content Include="allGraph.html">
       <BrowseToURL>~/all2.html</BrowseToURL>
