--- a/DD3/dd3.csproj
+++ b/DD3/dd3.csproj
@@ -87,11 +87,13 @@
   <ItemGroup>
     <Content Include="all.html" />
     <Content Include="allGraph16.html" />
+    <Content Include="allTransition.html" />
     <Content Include="allPie.html" />
     <Content Include="allGraph.html">
       <BrowseToURL>~/all2.html</BrowseToURL>
     </Content>
     <Content Include="graph.html" />
+    <Content Include="transition.html" />
     <Content Include="index.html">
       <BrowseToURL>~/index.html%3fcol=0&amp;row=0</BrowseToURL>
     </Content>
