Updated some test files

--- a/DD3/dd3.csproj
+++ b/DD3/dd3.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Content Include="all.html" />
     <Content Include="allGraph16.html" />
+    <Content Include="allTransition2.html" />
     <Content Include="allTransition.html" />
     <Content Include="allPie.html" />
     <Content Include="allGraph.html">
