--- a/DD3/dd3.csproj
+++ b/DD3/dd3.csproj
@@ -125,10 +125,10 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="dd3Hub.cs">
+    <Compile Include="dd3AppHub.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="dd3Server.cs">
+    <Compile Include="dd3App.cs">
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
