--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\..\..\GDO\GDO\packages.config" />
   <repository path="..\DD3\packages.config" />
   <repository path="..\LittleSignalR_VC\packages.config" />
 </repositories>
